@@ -2,6 +2,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [API Changes]
+    - Breaking: RPC client will unwrap the extra 'response' level from the response.
 
 0.007     2021-05-21 14:22:03+00:00 UTC
     [Bugs fixed]
